add figma embed as a test

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/ezbJvZY9OlSEWEEaJc0kzS/Job-Journal--G45-?embed-host=share" allowfullscreen></iframe>
 </body>
 </html> 
